[gd_scene load_steps=6 format=3 uid="uid://dsrgtpvjmquu7"]

[ext_resource type="Script" path="res://Props/Sign/Sign.gd" id="1_5laa4"]
[ext_resource type="PackedScene" uid="uid://wjt8cmlu4x6u" path="res://Systems/Interaction/Interactable.tscn" id="1_tmcpm"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_42pb3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_attle"]

[sub_resource type="BoxMesh" id="BoxMesh_pjs8m"]

[node name="Sign" type="Node3D"]
script = ExtResource("1_5laa4")

[node name="Sign" type="StaticBody3D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_42pb3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sign"]
shape = SubResource("BoxShape3D_attle")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Sign/CollisionShape3D"]
mesh = SubResource("BoxMesh_pjs8m")

[node name="Interactable" parent="." instance=ExtResource("1_tmcpm")]

[node name="CollisionShape3D" parent="Interactable" index="0"]
shape = SubResource("BoxShape3D_attle")

[node name="FastTravelWindow" type="Window" parent="."]
transparent_bg = true
title = "Choose your travel destination."
initial_position = 2
size = Vector2i(500, 500)
visible = false
popup_window = true

[node name="GridContainer" type="GridContainer" parent="FastTravelWindow"]
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonNorth" type="Button" parent="FastTravelWindow/GridContainer"]
layout_mode = 2
text = "North"

[node name="ButtonWest" type="Button" parent="FastTravelWindow/GridContainer"]
layout_mode = 2
text = "West"

[node name="ButtonEast" type="Button" parent="FastTravelWindow/GridContainer"]
layout_mode = 2
text = "East"

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]
[connection signal="close_requested" from="FastTravelWindow" to="." method="_on_fast_travel_window_close_requested"]

[editable path="Interactable"]
